feat: add scheduler features api for manager (#3488)
